🧹 chore: 2차 정리 - 중복 파일 및 테스트 파일 제거
- cluster/eks-cluster.yaml 삭제 (깨진 파일, services/ 디렉토리와 중복)
- docker-compose.yaml 삭제 (로컬 개발용)
- spire-security-demo.sh 삭제 (테스트 스크립트)
- spire/spiffe-helper-patch.yaml 삭제 (불완전한 patch 파일)
- services/kafka/kafka.yaml 수정 (불완전한 부분 완성)

남은 파일들은 실제 K8s 배포에 필요한 핵심 매니페스트만 유지

--- a/services/kafka/kafka.yaml
+++ b/services/kafka/kafka.yaml
@@ -259,4 +259,7 @@ spec:
                 --config compression.type=gzip
               
               echo "Listing all topics..."
-              kafka-topics --list --bootstrap-server kafka-service.production.svc.cluster.local:9092
+              kafka-topics --list --bootstrap-server kafka-service.production.svc.cluster.local:9092        storageClassName: gp3
+        resources:
+          requests:
+            storage: 20Gi
